--- a/movie/nbproject/project.properties
+++ b/movie/nbproject/project.properties
@@ -33,9 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/movie
 excludes=
+file.reference.flatlaf-1.1.jar=C:\\Users\\PC\\Desktop\\flatlaf-1.1.jar
+file.reference.json-20240303.jar=C:\\Users\\PC\\Desktop\\json-20240303.jar
+file.reference.mongo-java-driver-3.12.14.jar=C:\\Users\\PC\\Desktop\\mongo-java-driver-3.12.14.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.mongo-java-driver-3.12.14.jar}:\
+    ${file.reference.flatlaf-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
